--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -36,7 +36,7 @@
   grid-column: 1 / -1;
   grid-row: 3 / 4;
 
-  height: 40rem;
+  height: 30rem;
   width: 100%;
   padding: 5rem 10%;
 
@@ -55,5 +55,109 @@
   h4 {
     font-size: 2rem;
     color: rgba($color-text-dark, 0.5);
+  }
+}
+.about-team {
+  grid-row: 4 / 5;
+}
+.about-clients {
+  grid-row: 5 / 6;
+}
+
+.about-us {
+  grid-column: 1 / -1;
+
+  height: 40rem;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    height: 75rem;
+  }
+  &__picture {
+    height: 100%;
+    width: 40%;
+
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      height: 30rem;
+      order: 1;
+    }
+
+    &--1 {
+      background-image: url(../../images/wallpaper--9.jpg);
+    }
+    &--2 {
+      background-image: url(../../images/wallpaper--10.jpg);
+    }
+  }
+
+  &__text {
+    height: 100%;
+    width: 50%;
+    padding: 5rem 0 0 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 60%;
+      padding: 1rem 0 0 0;
+    }
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      height: 40rem;
+      order: 2;
+    }
+
+    &__header {
+      height: 10rem;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      p {
+        width: 75%;
+        color: rgba($color-text-dark, 0.5);
+      }
+    }
+    &__container {
+      height: 25rem;
+      width: 60rem;
+
+      display: flex;
+      flex-wrap: wrap;
+
+      @media only screen and (max-width: $bp-medium) {
+        width: 40rem;
+      }
+    }
+    &__box {
+      height: 12.5rem;
+      width: 30rem;
+      padding: 2rem;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      @media only screen and (max-width: $bp-medium) {
+        width: 20rem;
+      }
+    }
   }
 }
