--- a/src/style/_text.scss
+++ b/src/style/_text.scss
@@ -28,6 +28,7 @@
   }
   &__small {
     font-size: 1.7rem;
+    letter-spacing: 2px;
   }
 
   &__card {
@@ -75,6 +76,9 @@
 
 .text-white {
   color: white;
+}
+.p-small {
+  font-size: 1.4rem;
 }
 
 // link
