--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -144,6 +144,9 @@
       @media only screen and (max-width: $bp-medium) {
         width: 40rem;
       }
+      @media only screen and (max-width: $bp-small) {
+        width: 100%;
+      }
     }
     &__box {
       height: 12.5rem;
@@ -160,6 +163,7 @@
       }
       @media only screen and (max-width: $bp-small) {
         padding: 1rem;
+        width: 50%;
       }
     }
   }
