--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -169,3 +169,99 @@
     }
   }
 }
+.about-story {
+  grid-column: 1 / -1;
+  grid-row: 6 / 7;
+
+  width: 100%;
+  height: auto;
+  margin-top: 5%;
+  padding: 2rem;
+  background-color: rgba($color-text-dark, 0.8);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  h1 {
+    align-self: center;
+  }
+  h2 {
+    align-self: center;
+    color: rgba(white, 0.4);
+  }
+
+  &__card {
+    height: 30rem;
+    width: 60rem;
+    background-color: $color-secondary;
+    border-radius: 3px;
+    box-shadow: $box-shandow;
+
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @media only screen and (max-width: $bp-small) {
+      height: 25rem;
+      width: 32rem;
+    }
+
+    &--1 {
+      background-image: url(../../images/story/story--1.jpg);
+
+      margin-top: 10rem;
+      margin-left: 15%;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-left: 5%;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin-left: 2%;
+        margin-top: 5rem;
+      }
+    }
+    &--2 {
+      background-image: url(../../images/story/story--2.jpg);
+
+      margin-left: 30%;
+      margin-top: 5rem;
+      z-index: 2;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-left: 15%;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin-left: 6%;
+      }
+    }
+    &--3 {
+      background-image: url(../../images/story/story--3.jpg);
+
+      margin-left: 15%;
+      margin-top: -5rem;
+      z-index: 1;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-left: 5%;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin-left: 2%;
+      }
+    }
+    &--4 {
+      background-image: url(../../images/story/story--4.jpg);
+
+      margin-left: 30%;
+      margin-top: 5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-left: 15%;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin-left: 6%;
+      }
+    }
+  }
+}
