--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -215,60 +215,15 @@
 
     &--1 {
       background-image: url(../../images/story/story--1.jpg);
-
-      // margin-top: 10rem;
-      // margin-left: 15%;
-
-      // justify-content: flex-start;
-
-      @media only screen and (max-width: $bp-medium) {
-        // margin-left: 5%;
-      }
-      @media only screen and (max-width: $bp-small) {
-        // margin-left: 2%;
-        // margin-top: 5rem;
-      }
     }
     &--2 {
       background-image: url(../../images/story/story--2.jpg);
-
-      // margin-left: 30%;
-      // margin-top: 5rem;
-      // z-index: 2;
-
-      @media only screen and (max-width: $bp-medium) {
-        // margin-left: 15%;
-      }
-      @media only screen and (max-width: $bp-small) {
-        // margin-left: 6%;
-      }
     }
     &--3 {
       background-image: url(../../images/story/story--3.jpg);
-
-      // margin-left: 15%;
-      // margin-top: -5rem;
-      // z-index: 1;
-
-      @media only screen and (max-width: $bp-medium) {
-        // margin-left: 5%;
-      }
-      @media only screen and (max-width: $bp-small) {
-        // margin-left: 2%;
-      }
     }
     &--4 {
       background-image: url(../../images/story/story--4.jpg);
-
-      // margin-left: 30%;
-      // margin-top: 5rem;
-
-      @media only screen and (max-width: $bp-medium) {
-        // margin-left: 15%;
-      }
-      @media only screen and (max-width: $bp-small) {
-        // margin-left: 6%;
-      }
     }
   }
 
@@ -276,7 +231,7 @@
     height: 100%;
     width: 50%;
     background-color: rgba($color-secondary, 0.95);
-    transition: all 0.2s ease-in;
+    // transition: all 0.2s ease-in;
 
     display: flex;
     justify-content: center;
@@ -287,6 +242,7 @@
   height: 100%;
   width: 100%;
   padding: 2rem 5%;
+  // transition: all 0.2s ease-in;
 
   display: none;
   justify-content: center;
