--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -231,7 +231,6 @@
 
   &__text {
     height: 100%;
-    // width: 50%;
     width: fit-content;
     background-color: rgba($color-secondary, 0.95);
     padding: 1rem 5%;
@@ -242,4 +241,18 @@
     justify-content: space-evenly;
     align-items: center;
   }
+}
+
+.about-testimonial {
+  grid-column: 1 / -1;
+  grid-row: 7 / 8;
+
+  width: 100%;
+  height: auto;
+  margin-top: 5rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
