--- a/src/style/_contact-page.scss
+++ b/src/style/_contact-page.scss
@@ -59,7 +59,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
 
     @media only screen and (max-width: $bp-medium) {
@@ -137,4 +137,8 @@
     width: auto;
     margin-right: 2rem;
   }
+}
+
+.message-hidden {
+  display: none;
 }
