--- a/src/style/_contact-page.scss
+++ b/src/style/_contact-page.scss
@@ -51,6 +51,15 @@
     @media only screen and (max-width: $bp-small) {
       height: 60rem;
     }
+
+    &__container {
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
   &__message {
     height: 100%;
